minoar changes in meta data

--- a/ctse_chatbot.ipynb
+++ b/ctse_chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "5c7ca646",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "407a2f26",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "7d67bb1c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "2d53f999",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "e337266b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "8d41fba3",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "d26f64f5",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "071372fb",
    "metadata": {},
    "outputs": [
@@ -115,8 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: \n",
-      "DevOps is a set of practices that aim to improve collaboration and communication between software development and operations teams. It promotes a culture of shared responsibility and ownership among team members, reduces organizational silos, and encourages everyone to work towards a common goal of delivering high-quality software efficiently. By implementing DevOps, teams can measure everything from application performance to system monitoring and metrics, allowing for continuous improvement and faster response to issues. Gradual changes and frequent deployments also help in ensuring a stable and reliable software release process. Additionally, DevOps encourages a mindset of accepting failure as normal and focuses on blameless post-mortems and risk-taking to drive innovation. Leveraging tooling and automation is also a key aspect of DevOps, as it can help reduce manual work and improve efficiency. Overall, DevOps helps teams deliver better software faster and with fewer errors, ultimately benefiting both the organization and its customers.\n",
+      "Bot: The main point of implementing DevOps practices is to improve collaboration and communication between developers and operators. It aims to break down organizational silos and promote shared ownership of production. Other key aspects include measuring everything, implementing gradual changes, accepting failure as normal, and leveraging tooling and automation to increase efficiency and productivity. Ultimately, the goal of DevOps is to achieve agility and stability in software development and operations.\n",
       "\n",
       "Goodbye!\n"
      ]
